--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,9 +9,9 @@
       href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/gif" href="/images/MorgHeader.gif" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="shortcut icon" href="" />
-    <title>Portfolio</title>
+    <title>Portfolio-Maxime</title>
   </head>
   <body>
     <%- body %>
